blast/rust_stress_example/ffi/ext_stress_bridge.h

struct ExtStressSolverHandle;
typedef struct ExtStressSolverSettingsDesc {
    uint32_t max_solver_iterations_per_frame;
    uint32_t graph_reduction_level;
} ExtStressSolverSettingsDesc;
typedef struct ExtStressBondFracture {
    uint32_t userdata;
    uint32_t nodeIndex0;
    uint32_t nodeIndex1;
    float health;
} ExtStressBondFracture;
typedef struct ExtStressFractureCommands {
    uint32_t actorIndex;
    ExtStressBondFracture* bondFractures;
    uint32_t bondFractureCount;
    /* Number of fully-crushed chunks severed on this actor. The command payload
       itself stays inside the bridge (it is addressed by asset chunk index,
       which is an internal detail) and is re-attached automatically by
       ext_stress_solver_apply_fracture_commands. A command with zero bond
       fractures and a non-zero count here is still real work and must be
       applied -- a chunk can pulverize while every joint around it holds.
       Drain ext_stress_solver_get_crushed_nodes for the node-level events. */
    uint32_t chunkFractureCount;
} ExtStressFractureCommands;
typedef struct ExtStressActor {
    uint32_t actorIndex;
    const uint32_t* nodes;
    uint32_t nodeCount;
} ExtStressActor;
typedef struct ExtStressSplitEvent {
    uint32_t parentActorIndex;
    ExtStressActor* children;
    uint32_t childCount;
} ExtStressSplitEvent;
/* Per-bond utilisation from the last update(), asset-bond-indexed: max over
   modes of stress / that bond's OWN material elastic limit. 1/utilisation is
   the joint's safety factor. Broken bonds read 0. Returns entries written. */
uint32_t ext_stress_solver_get_bond_utilisations(const ExtStressSolverHandle* handle,
                                                 float* out_utilisation,
                                                 uint32_t capacity);
void ext_stress_solver_destroy(ExtStressSolverHandle* handle);
void ext_stress_solver_set_settings(ExtStressSolverHandle* handle,
                                    const ExtStressSolverSettingsDesc* settings);
uint32_t ext_stress_solver_graph_node_count(const ExtStressSolverHandle* handle);
uint32_t ext_stress_solver_bond_count(const ExtStressSolverHandle* handle);
void ext_stress_solver_reset(ExtStressSolverHandle* handle);
void ext_stress_solver_add_force(ExtStressSolverHandle* handle,
                                 uint32_t node_index,
                                 const StressVec3* local_position,
                                 const StressVec3* local_force,
                                 uint32_t mode);
// Batched external-force injection. Applies `count` forces in a single FFI
// crossing, mirroring ext_stress_solver_add_force for each entry. The parallel
// arrays are laid out as: node_indices[i] -> input node index; local_positions
// and local_forces -> flat [x, y, z] triples (offset 3*i). `mode` is shared by
// all entries. Null position/force arrays are treated as all-zero. Returns the
// number of entries processed.
uint32_t ext_stress_solver_add_all_forces(ExtStressSolverHandle* handle,
                                          const uint32_t* node_indices,
                                          const float* local_positions,
                                          const float* local_forces,
                                          uint32_t count,
                                          uint32_t mode);
void ext_stress_solver_add_gravity(ExtStressSolverHandle* handle,
                                   const StressVec3* local_gravity);
uint8_t ext_stress_solver_add_actor_gravity(ExtStressSolverHandle* handle,
                                            uint32_t actor_index,
                                            const StressVec3* local_gravity);
uint8_t ext_stress_solver_add_centrifugal_acceleration(ExtStressSolverHandle* handle,
                                                       uint32_t actor_index,
                                                       const StressVec3* local_center_mass,
                                                       const StressVec3* local_angular_velocity);
void ext_stress_solver_update(ExtStressSolverHandle* handle);
uint32_t ext_stress_solver_overstressed_bond_count(const ExtStressSolverHandle* handle);
uint32_t ext_stress_solver_actor_count(const ExtStressSolverHandle* handle);
uint8_t ext_stress_solver_collect_actors(const ExtStressSolverHandle* handle,
                                         ExtStressActor* actor_buffer,
                                         uint32_t actor_capacity,
                                         uint32_t* nodes_buffer,
                                         uint32_t nodes_capacity,
                                         uint32_t* out_actor_count,
                                         uint32_t* out_node_count);
uint8_t ext_stress_solver_generate_fracture_commands_per_actor(const ExtStressSolverHandle* handle,
                                                               ExtStressFractureCommands* command_buffer,
                                                               uint32_t command_capacity,
                                                               ExtStressBondFracture* bond_buffer,
                                                               uint32_t bond_capacity,
                                                               uint32_t* out_command_count,
                                                               uint32_t* out_bond_count);
uint8_t ext_stress_solver_apply_fracture_commands(ExtStressSolverHandle* handle,
                                                  const ExtStressFractureCommands* command_buffer,
                                                  uint32_t command_count,
                                                  ExtStressSplitEvent* events_buffer,
                                                  uint32_t event_capacity,
                                                  ExtStressActor* child_buffer,
                                                  uint32_t child_capacity,
                                                  uint32_t* out_event_count,
                                                  uint32_t* out_child_count,
                                                  uint32_t* nodes_buffer,
                                                  uint32_t nodes_capacity,
                                                  uint32_t* out_node_count);
uint8_t ext_stress_solver_get_excess_forces(const ExtStressSolverHandle* handle,
                                            uint32_t actor_index,
                                            const StressVec3* center_of_mass,
                                            StressVec3* out_force,
                                            StressVec3* out_torque);
float ext_stress_solver_get_linear_error(const ExtStressSolverHandle* handle);
float ext_stress_solver_get_angular_error(const ExtStressSolverHandle* handle);
uint8_t ext_stress_solver_converged(const ExtStressSolverHandle* handle);
uint8_t ext_stress_solver_set_gpu_accelerated(ExtStressSolverHandle* handle, uint8_t enabled);
void ext_stress_solver_set_gpu_cuda_context(ExtStressSolverHandle* handle, void* cuda_context);
void ext_stress_solver_set_gpu_minimum_bond_count(ExtStressSolverHandle* handle, uint32_t bond_count);
uint8_t ext_stress_solver_get_gpu_accelerated(const ExtStressSolverHandle* handle);
float ext_stress_solver_gpu_solve_milliseconds(const ExtStressSolverHandle* handle);
uint64_t ext_stress_solver_gpu_host_to_device_bytes(const ExtStressSolverHandle* handle);
uint64_t ext_stress_solver_gpu_device_to_host_bytes(const ExtStressSolverHandle* handle);