blast/blast-stress-solver-rs/src/ffi.rs


    // ---- CUDA stress-solve backend (orthogonal to the physics engine) ----
    pub(crate) fn ext_stress_solver_set_gpu_accelerated(handle: *mut ExtStressSolverHandle, enabled: u8) -> u8;
    pub(crate) fn ext_stress_solver_get_gpu_accelerated(handle: *const ExtStressSolverHandle) -> u8;
    pub(crate) fn ext_stress_solver_set_gpu_cuda_context(handle: *mut ExtStressSolverHandle, cuda_context: *mut std::ffi::c_void);
    pub(crate) fn ext_stress_solver_set_gpu_minimum_bond_count(handle: *mut ExtStressSolverHandle, bond_count: u32);
    pub(crate) fn ext_stress_solver_gpu_solve_milliseconds(handle: *const ExtStressSolverHandle) -> f32;
    pub(crate) fn ext_stress_solver_gpu_host_to_device_bytes(handle: *const ExtStressSolverHandle) -> u64;
    pub(crate) fn ext_stress_solver_gpu_device_to_host_bytes(handle: *const ExtStressSolverHandle) -> u64;

    pub(crate) fn ext_stress_solver_get_bond_utilisations(
        handle: *const ExtStressSolverHandle,
        out_utilisation: *mut f32,
        capacity: u32,
    ) -> u32;

    pub(crate) fn ext_stress_solver_destroy(handle: *mut ExtStressSolverHandle);

    pub(crate) fn ext_stress_solver_set_settings(
        handle: *mut ExtStressSolverHandle,
        settings: *const FfiExtStressSolverSettingsDesc,
    );

    pub(crate) fn ext_stress_solver_graph_node_count(handle: *const ExtStressSolverHandle) -> u32;

    pub(crate) fn ext_stress_solver_bond_count(handle: *const ExtStressSolverHandle) -> u32;

    pub(crate) fn ext_stress_solver_reset(handle: *mut ExtStressSolverHandle);

    pub(crate) fn ext_stress_solver_add_force(
        handle: *mut ExtStressSolverHandle,
        node_index: u32,
        local_position: *const Vec3,
        local_force: *const Vec3,
        mode: u32,
    );

    pub(crate) fn ext_stress_solver_add_all_forces(
        handle: *mut ExtStressSolverHandle,
        node_indices: *const u32,
        local_positions: *const f32,
        local_forces: *const f32,
        count: u32,
        mode: u32,
    ) -> u32;

    pub(crate) fn ext_stress_solver_add_gravity(
        handle: *mut ExtStressSolverHandle,
        local_gravity: *const Vec3,
    );

    pub(crate) fn ext_stress_solver_add_actor_gravity(
        handle: *mut ExtStressSolverHandle,
        actor_index: u32,
        local_gravity: *const Vec3,
    ) -> u8;

    pub(crate) fn ext_stress_solver_add_centrifugal_acceleration(
        handle: *mut ExtStressSolverHandle,
        actor_index: u32,
        local_center_mass: *const Vec3,
        local_angular_velocity: *const Vec3,
    ) -> u8;

    pub(crate) fn ext_stress_solver_update(handle: *mut ExtStressSolverHandle);

    pub(crate) fn ext_stress_solver_overstressed_bond_count(
        handle: *const ExtStressSolverHandle,
    ) -> u32;

    pub(crate) fn ext_stress_solver_generate_fracture_commands_per_actor(
        handle: *const ExtStressSolverHandle,
        command_buffer: *mut FfiExtStressFractureCommands,
        command_capacity: u32,
        bond_buffer: *mut FfiExtStressBondFracture,
        bond_capacity: u32,
        out_command_count: *mut u32,
        out_bond_count: *mut u32,
    ) -> u8;

    pub(crate) fn ext_stress_solver_apply_fracture_commands(
        handle: *mut ExtStressSolverHandle,
        command_buffer: *const FfiExtStressFractureCommands,
        command_count: u32,
        events_buffer: *mut FfiExtStressSplitEvent,
        event_capacity: u32,
        child_buffer: *mut FfiExtStressActor,
        child_capacity: u32,
        out_event_count: *mut u32,
        out_child_count: *mut u32,
        nodes_buffer: *mut u32,
        nodes_capacity: u32,
        out_node_count: *mut u32,
    ) -> u8;

    pub(crate) fn ext_stress_solver_actor_count(handle: *const ExtStressSolverHandle) -> u32;

    pub(crate) fn ext_stress_solver_collect_actors(
        handle: *const ExtStressSolverHandle,
        actor_buffer: *mut FfiExtStressActor,
        actor_capacity: u32,
        nodes_buffer: *mut u32,
        nodes_capacity: u32,
        out_actor_count: *mut u32,
        out_node_count: *mut u32,
    ) -> u8;

    pub(crate) fn ext_stress_solver_get_excess_forces(
        handle: *const ExtStressSolverHandle,
        actor_index: u32,
        center_of_mass: *const Vec3,
        out_force: *mut Vec3,
        out_torque: *mut Vec3,
    ) -> u8;

    pub(crate) fn ext_stress_solver_get_linear_error(handle: *const ExtStressSolverHandle) -> f32;

    pub(crate) fn ext_stress_solver_get_angular_error(handle: *const ExtStressSolverHandle) -> f32;

    pub(crate) fn ext_stress_solver_converged(handle: *const ExtStressSolverHandle) -> u8;
}
